[GTK] Missing API detected in GObject DOM bindings after r176630 https://bugs.webkit.org/show_bug.cgi?id=139201

Reviewed by Gustavo Noronha Silva.

.:

Change GENERATE_BINDINGS macro to receive a list of optional
additional dependencies, so that we can add more dependecies
without having to change the macro.

* Source/cmake/WebKitMacros.cmake:

Source/WebCore:

Bring back WebKitDOMDeprecated and add custom versions of the
removed symbols as deprecated in favor of the new ones. Also add
the new ones as stable API.

* CMakeLists.txt: Pass a list of additional dependencies to GENERATE_BINDINGS.
* PlatformGTK.cmake: Ditto.
* PlatformMac.cmake: Ditto.
* bindings/gobject/WebKitDOMDeprecated.cpp: Added.
(webkit_dom_html_element_get_inner_html):
(webkit_dom_html_element_set_inner_html):
(webkit_dom_html_element_get_outer_html):
(webkit_dom_html_element_set_outer_html):
* bindings/gobject/WebKitDOMDeprecated.h: Added.
* bindings/gobject/WebKitDOMDeprecated.symbols: Added.
* bindings/gobject/webkitdom.symbols:

Tools:

Handle deprecated symbols again when generating the GObject DOM
bindings documentation.

* gtk/webkitdom.py:
(WebKitDOMDocGenerator):
(WebKitDOMDocGenerator.is_deprecated_symbol_file):
(WebKitDOMDocGenerator.generate):
(WebKitDOMDocGeneratorSections.__init__):
(WebKitDOMDocGeneratorSections._find_deprecated_symbols):
(WebKitDOMDocGeneratorSections.write_section):

Canonical link: https://commits.webkit.org/157210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176919 268f45cc-cd09-0410-ab3c-d52691b4dbfc